# climate-news-db

./: .dockerignore  .env  .envrc  .gitignore  .ruffignore  CONTRIBUTING.md  Dockerfile  Dockerfile.web  Makefile  Procfile  README.md  analytics.py  app.Dockerfile  app.py  backwards.py  build-docker-image.sh  collect_urls.py  config.py  cron-tmux.sh  database.py  download.py  fly.toml  guardian.py  heroku.yml  inspect.sh  lambda.Dockerfile  logger.py  make_logger.py  neuapp.py  newspapers.json  package-lock.json  package.json  parse_urls.py  pyproject.toml  readme.md  requirements-neu.txt  requirements.txt  scrapy.cfg  serverless.yml  setup.py  (+8 more)
.github/workflows/: deploy.yml  test.yml
.streamlit/: config.toml
climatedb/: __init__.py  analytics.py  app.py  charts.py  collect.py  collect_urls.py  config.py  crawl.py  database.py  databases.py  databases_neu.py  engines.py  extensions.py  files.py  gpt.py  heal.py  items.py  lambda.py  logger.py  middlewares.py  models.py  parse.py  parse_urls.py  parsing_utils.py  pipelines.py  registry.py  rm_article.sh  scrape.py  scrapy_settings.py  search.py  services.py  settings.py  setup_sql.py  sql.py  stats.py  test_bbc.py  test_dbs.py  test_sql.py  tests.py  types.py  (+2 more)
climatedb/lambda/: handlers.py
climatedb/newspapers/: aljazeera.py  atlantic.py  bbc.py  cnn.py  dailymail.py  dw.py  economist.py  fox.py  guardian-old.py  guardian.py  independent.py  newshub.py  nytimes.py  nzherald.py  registry.py  skyau.py  stuff.py  template.py  utils.py  washington_post.py
climatedb/spiders/: aljazeera.py  atlantic.py  base.py  batimes.py  bbc.py  china_daily.py  cnn.py  daily_nation.py  daily_post.py  daily_post_nigeria.py  dailymail.py  dw.py  economist.py  folha.py  fox.py  guardian.py  independent.py  newshub.py  nytimes.py  nzherald.py  skyau.py  stuff.py  washingtion_post.py  washington_post.py  yomiuri.py
climatedb/templates/: newspaper.html  year_chart.html
climatedb/tests/: test_collect_urls.py  test_databases.py  test_engines.py  test_parse.py  test_registry.py  tests.py
dev/: database-old.py  heal.py  inspect.sh  search_dev.py
docker/: app.Dockerfile  crawl-entrypoint.sh  crawl.Dockerfile  lambda.Dockerfile  search.Dockerfile  web-entrypoint.sh  web.Dockerfile
infra/: README.md  app.py  stacks.py
newspapers/: aljazeera.py  atlantic.py  economist.py  fox.py  guardian.py  newshub.py  newspaper3k.py  nytimes.py  nzherald.py  registry.py  skyau.py  stuff.py  utils.py
notebooks/: climate-feedback.ipynb  visualization-prototyping.ipynb
poc/: explore-gpt-opinion.py
scripts/: clean.py  clean_urls_json.py  clean_urls_jsonl.py  cli.sh  convert_spiders.py  create_sqlite.py  create_sqlite_app.py  create_sqlite_one.py  create_sqlite_papers.py  create_urls_csv.py  debug.py  doctor.py  inspect_db.py  migrate_to_sqlite.py  migrate_to_urls_json.py  migration.py  normalize_datetimes.py  regen_database.py  remove_url.py  run-search-lambdas.py  search-cli.sh  seed.py  status.sh
scripts/migration/: create_urls_json.py
static/: app.js  chart-home.js  dark-mode.js  style.css
templates/: article-meta.html  article.html  base.html  charts.html  footer.html  gpt.html  home.html  latest.html  layout.html  logs.html  navbar.html  newspaper.html
tests/: conftest.py  test_collect.py  test_crawl.py  test_databases.py  test_engines.py  test_integration.py  test_parse.py  test_registry.py  tests.py
tests/newspapers/: test_bbc.py
(+6 files in other folders)
