[tool.poetry]
name = "climatedb"
version = "0.3.0"
description = "A dataset of climate change newspaper articles."
authors = ["Adam Green <adam.green@adgefficiency.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.1"
Scrapy = "^2.6.1"
fastapi = "^0.75.0"
sqlmodel = "^0.0.6"
python-dotenv = "^0.20.0"
uvicorn = "^0.17.6"
pandas = "^1.4.1"
pydantic = "^1.9.0"
rich = "^12.0.1"
google = "^3.0.0"
Jinja2 = "^3.1.1"
black = "^22.8.0"
isort = "^5.10.1"
prefect = "^2.3.2"
prefect-shell = "^0.1.1"
awscli = "^1.25.71"
boto3 = "^1.24.70"

[tool.poetry.dev-dependencies]

[tool.poetry.group.develop.dependencies]
ipython = "^8.10.0"


[tool.poetry.group.dev.dependencies]
pyright = "^1.1.295"
isort = "^5.12.0"
flake8 = "^6.0.0"
jedi = "^0.18.2"


[tool.poetry.group.check.dependencies]
ruff = "^0.0.254"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
