[tool.poetry]
name = "climatedb"
version = "0.4.0"
description = "A dataset of climate change newspaper articles."
authors = ["Adam Green <adam.green@adgefficiency.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.94.1"
sqlmodel = "^0.0.8"
rich = "^13.3.2"
ruff = "^0.0.256"
black = "^23.1.0"
scrapy = "^2.8.0"
pyright = "^1.1.299"
mypy = "^1.1.1"
pytest = "^7.2.2"
isort = "^5.12.0"
awscli = "^1.27.94"
types-requests = "^2.28.11.15"
coverage = "^7.2.2"
pandas = "^1.5.3"
uvicorn = "^0.21.1"
jinja2 = "^3.1.2"
datasette = "^0.64.2"
scrapy-fake-useragent = "^1.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
#  needed as the Spider base class is typing.Any
disallow_subclassing_any = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
#  allows doing list rather than list[str]
disallow_any_generics = false

[tool.ruff]
ignore = ["E501"]
