[tool.poetry]
name = "climatedb"
version = "0.4.0"
description = "A dataset of climate change newspaper articles."
authors = ["Adam Green <adam.green@adgefficiency.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
google = "^3.0.0"
aws-cdk-lib = "^2.75.0"
constructs = "^10.2.0"
boto3 = "^1.26.115"
fastapi = "^0.101.1"
sqlmodel = "^0.0.8"
rich = "^13.5.2"
scrapy = "^2.10.0"
mypy = "^1.5.1"
pytest = "^7.4.0"
isort = "^5.12.0"
awscli = "^1.29.28"
coverage = "^7.3.0"
pandas = "^2.0.3"
uvicorn = "^0.23.2"
jinja2 = "^3.1.2"
datasette = "^0.64.3"
scrapy-fake-useragent = "^1.4.4"
typer = "^0.9.0"
aiohttp = "^3.8.5"
ruff = "^0.0.284"
black = "^23.7.0"

[tool.poetry.group.develop.dependencies]
ipython = "^8.11.0"
matplotlib = "^3.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
#  needed as the Spider base class is typing.Any
disallow_subclassing_any = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
#  allows doing list rather than list[str]
disallow_any_generics = false

[tool.ruff]
ignore = ["E501"]
